# bot2

./: .gitignore  CMakeLists.txt  README.md  format_json.py  gen_map.bat  genmap.bat  genmap.sh  note.txt  run.bat  run.sh  showmap.bat
bot/: bot_main.cpp
config/: bot_cfg.json
res/glsl/: particle_frag_shader.glsl  particle_vertex_shader.glsl  simple_frag_shader.glsl  simple_vertex_shader.glsl
res/lib/: ai_lib.json  ai_robot_template_lib.json  base_template_lib.json  button_config.json  color_lib.json  component_lib.json  dashboard_config.json  game_config.json  game_screen_config.json  goodie_template_lib.json  map_generator_lib.json  message_box_config.json  missile_template_lib.json  mover_template_lib.json  particle_effect_template_lib.json  player_lib.json  player_template.json  progress_bar_template_lib.json  progress_ring_lib.json  rect_lib.json  robot_class_lib.json  robot_template_lib.json  skill_template_lib.json  start_screen_config.json  status_bar_template_lib.json  texture_lib.json  tile_template_lib.json  weapon_template_lib.json
res/map/: map02.json  map_01.json  map_02.json  map_03.json  map_04.json
shared_lib/ai/: bot_ai.cpp  bot_ai.h  bot_chase_shoot_ai.cpp  bot_chase_shoot_ai.h
shared_lib/app/: bot_app.cpp  bot_app.h  bot_app_config.cpp  bot_app_config.h
shared_lib/gameobj/: bot_ability.h  bot_action.h  bot_ai_robot.cpp  bot_ai_robot.h  bot_ai_robot_template.cpp  bot_ai_robot_template.h  bot_base.cpp  bot_base.h  bot_base_component.cpp  bot_base_component.h  bot_base_template.cpp  bot_base_template.h  bot_bullet.cpp  bot_bullet.h  bot_bullet_template.cpp  bot_bullet_template.h  bot_component.cpp  bot_component.h  bot_component_type.h  bot_dashboard.cpp  bot_dashboard.h  bot_dashboard_config.cpp  bot_dashboard_config.h  (+69 more)
(+216 files in other folders)
